--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,11 @@
-<%= form_tag posts_path do %>
+<h3>Post Form</h3>
+ 
+<%= form_tag posts_path, method: "post" do %>
   <label>Post title:</label><br>
-  <%= text_field_tag :title %><br>
+  <%= text_field_tag :title%><br>
 
   <label>Post Description</label><br>
-  <%= text_area_tag :description %><br>
-
+  <%= text_area_tag :description%><br>
+  
   <%= submit_tag "Submit Post" %>
 <% end %>
