add form_for instead form_tag

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<h3>Post Form</h3>
+<!--<h3>Post Form</h3>
 
 <%= form_tag post_path(@post), method: "put" do %>
   <label>Post title:</label><br>
@@ -8,4 +8,17 @@
   <%= text_area_tag :description, @post.description %><br>
   
   <%= submit_tag "Submit Post" %>
-<% end %>
+<% end %>-->
+
+<h3>Post Form</h3>
+
+<%= form_for(@post) do |f| %>
+<!--|f| is an iterator variable that we can use on the new form object that will allow us to dynamically assign form field elements
+ to each of the @post's data attributes, along with auto filling the values for each field.-->
+<label>Post title:</label><br>
+<%= f.text_field :title %><br>
+<label>Post description</label><br>
+<%= f.text_area :description %><br>
+<%= f.submit %>
+
+
