--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,9 @@
 <h3>Post Form</h3>
-
-<%= form_tag post_path(@post), method: "put" do %>
+<%= form_for(@post) do |form|%>
   <label>Post title:</label><br>
-  <%= text_field_tag :title, @post.title %><br>
+  <%= form.text_field :title%><br>
 
   <label>Post Description</label><br>
-  <%= text_area_tag :description, @post.description %><br>
-  
-  <%= submit_tag "Submit Post" %>
+  <%= form.text_field :description%><br>
+  <%= form.submit "Update Post" %>
 <% end %>
