--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,9 @@
-<h3>Post Form</h3>
-
-<%= form_tag post_path(@post), method: "put" do %>
+<%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
-<%= f.text_field :title %><br>
+  <%= f.text_field :title %><br>
  
-<label>Post description</label><br>
-<%= f.text_area :description %><br>
-  
-  <%= submit_tag "Submit Post" %>
+  <label>Post description</label><br>
+  <%= f.text_area :description %><br>
+ 
+  <%= f.submit %>
 <% end %>
