--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,7 @@
-<h3>Post Form</h3>
+<h1>Post Form</h1>
 
 <%= form_for(@post) do |f| %>
-  <label>Post title:</label> <br>
+  <h1><label>Post title:</label></h1> <br>
   <%= f.text_field :title %> <br>
 
   <label>Post Description</label><br>
