--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,11 @@
 <h3>Post Form</h3>
+
+<%= form_tag posts_path do %>
+  <label>Article title:</label><br>
+  <%= text_field_tag :title %><br>
  
-<%= form_for(@post) do |f| %>
-  <label>Post title:</label><br>
-  <%= f.text_field :title %><br>
+  <label>Article Description</label><br>
+  <%= text_area_tag :description %><br>
  
-  <label>Post description</label><br>
-  <%= f.text_area :description %><br>
- 
-  <%= f.submit %>
+  <%= submit_tag "Submit Post" %>
 <% end %>
