--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,4 @@
+<!--
 <h3>Post Form</h3>
 
 <%= form_tag post_path(@post), method: "put" do %>
@@ -8,4 +9,17 @@
   <%= text_area_tag :description, @post.description %><br>
   
   <%= submit_tag "Submit Post" %>
+<% end %>
+-->
+
+<h3>Post Form</h3>
+ 
+<%= form_for(@post) do |f| %>
+  <label>Post title:</label><br>
+  <%= f.text_field :title %><br>
+ 
+  <label>Post description</label><br>
+  <%= f.text_area :description %><br>
+ 
+  <%= f.submit %>
 <% end %>
