--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -9,3 +9,13 @@
   
   <%= submit_tag "Submit Post" %>
 <% end %>
+
+<%= form_for(@post) do |f| %>
+  <label>Post Title</label><br>
+  <%= f.text_field :title %><br>
+
+  <label>Post Description:</label><br>
+  <%= f.text_area :description %><br>
+
+  <%= f.submit %>
+<% end %>
